# email-assistant

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  EmailAssistant.spec  PRODUCT.md  README.md  build_app.sh  config.json.example  deploy.sh  launcher.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh  startnativeapp.sh  stopserver.sh  todo.md  todo_priority.md
.github/workflows/: build-release.yml  docs-pages.yml  smoke-ci.yml
.impeccable/: design.json
.impeccable/critique/: 2026-05-19T21-59-34Z__email-assistant-app-ui.md
app/: __init__.py  config_store.py  dev_reload.py  llm_client.py  llm_providers.py  paths.py  prompt_defaults.py  quick_templates.py  runtime.py  task_runner.py  updater.py
app/prompts/: entity_ai_block_system.md  entity_ai_block_user.md  entity_canonicalize_system.md  entity_canonicalize_user.md  entity_extraction_system.md  entity_extraction_user.md  knowledge_contact_system.md  knowledge_contact_user.md  knowledge_style_system.md  knowledge_style_user.md  mail_summary_system.md  response_system.md  (+1 more)
assets/: icon.icns
docs/: architecture.md  backend.md  conf.py  index.md  knowledge.md  release.md  sync.md  testing.md
docs/api/: app.rst  (+1 more)
modules/: calendar_store.py  database.py  imap_fetcher.py  keychain_store.py  knowledge_builder.py  llm_logger.py  response_generator.py  triage_store.py  voice_handler.py
templates/: index.html
tests/: test_config_store.py  test_database_queries.py  test_database_triage.py  test_imap_fetcher.py  test_knowledge_builder.py  test_mail_summary_service.py  test_todo_service.py  test_updater.py
(+53 files in other folders)
