[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "email-assistant"
version = "0.0.0"
description = "Local-first email assistant for IMAP triage, knowledge, and draft generation."
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "requests>=2.31",
  "urllib3<2",
  "keyring>=25.0",
  "requests-ntlm>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "sphinx>=7.0",
  "myst-parser>=2.0",
  "sphinx-autodoc-typehints>=2.0",
]

[tool.setuptools]
packages = ["app", "app.routes", "modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Start with correctness-oriented smoke checks. Style/format enforcement can
# become stricter after the existing large modules are covered by tests.
select = ["E9", "F63", "F7", "F82"]
